@@ -1,0 +1,8 @@
+<html>
+  <head>
+    <title>Title</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=unicode">
+    <style></style>
+  </head>
+  <body>This is a sample text</body>
+</html>
